# CloudMini_project

./: .breakpoints  aws_.py  azure.py  azure_function.py  cloudminiproject.pem  extra_functions.py  main.py  mongodb.py  pyproject.toml  requirements.txt
buffer/upload_buffer/: 4389orange.jfif  9183practical_7_a028.py
static/styles/: bootstrap.css  color.css  color4.css  flaticon.css  main.css  style.css
templates/: download.html  homepage.html  index.html  test_if_uploaded.html  upload.html
