[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
flask = "==1.0.2"
python = "^3.8"
pymongo = "^3.12.0"
pytz = "^2021.1"
Flask-PyMongo = "^2.3.0"
dnspython = "^2.1.0"
boto3 = "^1.19.0"
azure-storage-blob = "^12.9.0"
